<resources>
    <string name="app_name">TestApp</string>
    <string name="action_settings">Settings</string>
    <string name="care_to_ur_heart">Care to ur HearT!!</string>
    <string name="cardioview">CardioView</string>
    <string name="search_your_queries">Search your queries</string>
    <string name="search">Search</string>
    <string name="button">Button</string>
    <string name="chestpain">Chest Pain</string>
    <string name="chestpain_txt"><br>Chest pain appears in many forms, ranging from a sharp stab to a dull ache.
        Sometimes chest pain feels crushing or burning. In certain cases, the pain travels up the neck,
        into the jaw, and then radiates to the back or down one or both arms.\n</br>
        <br>Many different problems can cause chest pain. The most life-threatening causes involve the heart or lungs.
        Because chest pain can indicate a serious problem, it\'s important to seek immediate medical help.\n</br> </string>
    <string name="chestpain_causes">ChestPain Caauses:-</string>
    <string name="chestpain_cause1">1. Heart-related causes:</string>
    <string name="chestpain_cause11"><br>I. Heart attack- A heart attack results from blocked blood flow, often from a blood clot, to your heart muscle.\n\n</br>
        <br>II. Angina- Angina is the term for chest pain caused by poor blood flow to the heart. This is often caused by the buildup of thick plaques on the inner walls of the arteries that carry blood to your heart. These plaques narrow the arteries and restrict the heart\'s blood supply, particularly during exertion.\n\n</br>
        <br>III. Aortic dissection- This life-threatening condition involves the main artery leading from your heart (aorta). If the inner layers of this blood vessel separate, blood is forced between the layers and can cause the aorta to rupture.\n\n</br>
        <br>IV. Pericarditis- This is the inflammation of the sac surrounding your heart. It usually causes sharp pain that gets worse when you breathe in or when you lie down.\n\n</br>
    </string>
    <string name="chestpain_cause2">Digestive causes:-</string>
    <string name="chestpain_cause21"><br>I. Heartburn- This painful, burning sensation behind your breastbone occurs when stomach acid washes up from your stomach into the tube that connects your throat to your stomach (esophagus).\n\n</br>
        <br>II. Swallowing disorders- Disorders of the esophagus can make swallowing difficult and even painful.\n\n</br>
        <br>III. Gallbladder or pancreas problems- Gallstones or inflammation of your gallbladder or pancreas can cause abdominal pain that radiates to your chest.\n</br></string>
    <string name="chestpain_cause3">Muscle and bone causes:-</string>
    <string name="chestpain_cause31"><br>I. Costochondritis- In this condition, the cartilage of your rib cage, particularly the cartilage that joins your ribs to your breastbone, becomes inflamed and painful.\n\n</br>
        <br>II. Sore muscles- Chronic pain syndromes, such as fibromyalgia, can produce persistent muscle-related chest pain.\n\n</br>
        <br>III. Injured ribs- A bruised or broken rib can cause chest pain.\n</br></string>
    <string name="chestpain_cause4">Lung-related causes</string>
    <string name="chestpain_cause41"><br>I. Pulmonary embolism- This occurs when a blood clot becomes lodged in a lung (pulmonary) artery, blocking blood flow to lung tissue.\n\n</br>
        <br>II. Pleurisy- If the membrane that covers your lungs becomes inflamed, it can cause chest pain that worsens when you inhale or cough.\n\n</br>
        <br>III. Collapsed lung- The chest pain associated with a collapsed lung typically begins suddenly and can last for hours, and is generally associated with shortness of breath. A collapsed lung occurs when air leaks into the space between the lung and the ribs.\n\n</br>
        <br>IV. Pulmonary hypertension- This condition occurs when you have high blood pressure in the arteries carrying blood to the lungs, which can produce chest pain.\n</br>
    </string>
    <string name="chestpain_cause5">Other causes:-</string>
    <string name="chestpain_cause51"><br>I. Panic attack- If you have periods of intense fear accompanied by chest pain, a rapid heartbeat, rapid breathing, profuse sweating, shortness of breath, nausea, dizziness and a fear of dying, you may be experiencing a panic attack.\n\n</br>
        <br>II. Shingles- Caused by a reactivation of the chickenpox virus, shingles can produce pain and a band of blisters from your back around to your chest wall.\n</br>
    </string>
    <string name="chestpain_treatment">ChestPain Treatment</string>
    <string name="chestpain_treat1">Medications</string>
    <string name="chestpain_treat11"><br>Drugs used to treat some of the most common causes of chest pain include:\n</br>

        <br>1. Artery relaxers- Nitroglycerin — usually taken as a tablet under the tongue — relaxes heart arteries, so blood can flow more easily through the narrowed spaces. Some blood pressure medicines also relax and widen blood vessels.\n\n</br>
        <br>II. Aspirin- If doctors suspect that your chest pain is related to your heart, you\'ll likely be given aspirin.\n\n</br>
        <br>III. Thrombolytic drugs- If you are having a heart attack, you may receive these clot-busting drugs. These work to dissolve the clot that is blocking blood from reaching your heart muscle.\n\n</br>
        <br>IV. Blood thinners- If you have a clot in an artery feeding your heart or lungs, you\'ll be given drugs that inhibit blood clotting to prevent the formation of more clots.\n\n</br>
        <br>V. Acid-suppressing medications- If your chest pain is caused by stomach acid splashing into your esophagus, the doctor may suggest medications that reduce the amount of acid in your stomach.\n\n</br>
        <br>VI. Antidepressants- If you\'re experiencing panic attacks, your doctor may prescribe antidepressants to help control your symptoms. Psychological therapy, such as cognitive behavioral therapy, also might be recommended.\n</br></string>
    <string name="chestpain_treat2">Surgical and other procedures</string>
    <string name="chestpain_treat21"><br>I. Angioplasty and stent placement- If your chest pain is caused by a blockage in an artery feeding your heart, your doctor will insert a catheter with a balloon on the end into a large blood vessel in your groin, and thread it up to the blockage. Your doctor will inflate the balloon tip to widen the artery, then deflate and remove the catheter. In most cases, a small wire mesh tube (stent) is placed on the outside of the balloon tip of the catheter. When expanded, the stent locks into place to keep the artery open.\n\n</br>
        <br>II. Bypass surgery- During this procedure, surgeons take a blood vessel from another part of your body and use it to create an alternative route for blood to go around the blocked artery.\n\n</br>
        <br>III. Dissection repair- You may need emergency surgery to repair an aortic dissection — a life-threatening condition in which the artery that carries blood from your heart to the rest of your body ruptures.\n\n</br>
        <br>IV. Lung reinflation- If you have a collapsed lung, doctors may insert a tube in your chest to reinflate the lung.\n</br></string>
    <string name="chestpain_precaution">ChestPain Precaution:-</string>
    <string name="chestpain_precaution_txt">Ten home remedies for heart pain</string>
    <string name="chestpain_precaution_list"><br>I. Almonds -
When acid reflux is to blame for the heart pain, eating a few almonds or drinking a cup of almond milk may help.
There is not much scientific evidence to support these claims around almonds. Instead, most of the evidence is anecdotal with people passing on their knowledge or experience to others.
However, some research indicates that almond consumption may help with the prevention of heart disease. Though almonds may not stop the immediate pain, they can have a positive impact on overall heart health.</br>
    <br>2. Cold pack -
A common cause of heart or chest pain is a muscle strain. In these cases, a person can have pain in the chest due to strain from exercise, other activities, or blunt trauma.
        In any of these cases, icing the area with a cold pack is a widely accepted method to help reduce swelling and stop the pain.</br>
    <br>3. Hot drinks -
A hot drink may help to eliminate gas when a person\'s pain is due to gas or bloating. The hot liquid can also help boost digestion.
        Hibiscus may also play a role in lowering blood pressure and reducing cholesterol. These added benefits may help prevent heart complications.</br>
    <br>4. Baking soda -
Another popular recommendation for heart pain is to add baking soda to warm or cool water. The result is an alkaline solution that can help reduce the acid in the stomach if that is causing the pain.
        However, a study in 2013 concluded that baking soda may be good to treat heartburn but may have adverse effects on the heart overall.</br>
    <br>5. Garlic\nGarlic is claimed to be a remedy for chest pain, although there is no science to back this up.\n</br>
        <br>7. Aspirin
A person may want to take aspirin if they have chest pain. A pain reliever, such as aspirin, can help alleviate the heart pain associated with less severe cases.\n</br>
    </string>
    <string name="todo">TODO</string>
    <string name="maintainheart">Maintain Your Heart</string>
    <string name="workout_for_your_heart">Workout for YOur Heart</string>
    <string name="checkup_record">CheckUp Reminder</string>
    <string name="medicine_reminder">Medicine Reminder</string>
    <string name="anginapaintxt">Angina is not a disease in its own right but a probable symptom of coronary artery disease.

It is a tightness, pain, or discomfort in the chest that occurs when an area of the heart muscle receives less blood oxygen than usual.

It is not a life-threatening condition when experienced on its own.

However, if a person is experiencing angina, it is a strong indicator that they have a type of heart disease. </string>
    <string name="anginapain_symptomslist">Angina is usually felt in the chest region as:<br>\n</br>

        squeezing<br>\n</br>
        pressure<br>\n</br>
        heaviness<br>\n</br>
        tightening<br>\n</br>
        burning or aching across the chest, usually starting behind the breastbone<br>\n\n</br>

        <b>This pain often spreads to the neck, jaw, arms, shoulders, throat, back, or even the teeth.</b><br>\n</br>

    Patients may also complain of symptoms including:<br>\n</br>

    indigestion<br>\n</br>
    heartburn<br>\n</br>
    weakness<br>\n</br>
    sweating<br>\n</br>
    nausea<br>\n</br>
    cramping<br>\n</br>
    shortness of breath<br>\n</br><br>\n</br>
    Stable angina usually lasts a short period and may feel like gas or indigestion. Unstable angina occurs at rest, is surprising, lasts longer, and may worsen over time. Variant angina occurs at rest and is usually severe.<br>\n</br> </string>
    <string name="angina_is_most_frequently_the_result_of_underlying_coronary_artery_disease_the_coronary_arteries_supply_the_heart_with_oxygen_rich_blood_when_cholesterol_aggregates_on_the_artery_wall_and_hard_plaques_form_the_artery_narrows">Angina is most frequently the result of underlying coronary artery disease. The coronary arteries supply the heart with oxygen-rich blood. When cholesterol aggregates on the artery wall and hard plaques form, the artery narrows.<br>\n\n</br>
    The actual angina attacks are the result of this reduced oxygen supply to the heart. Common triggers include:<br>\n</br>

physical exertion<br>\n</br>
severe emotional stress<br>\n</br>
a heavy meal<br>\n</br>
exposure to extreme temperatures<br>\n</br>
smoking may trigger angina attacks<br>\n\n</br>


    </string>
    <string name="causes">Causes</string>
    <string name="symptoms">Symptoms</string>
</resources>