<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".anginapain"
    android:background="#ca170f"
    android:id="@+id/anginapain">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:padding="3dp"
        android:text="@string/cardioview"
        android:textColor="#ca170f"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="555dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/anginapain_img"
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/anginapain"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="132dp" />

            <TextView
                android:id="@+id/anginapain1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Angina Pain"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="186dp"
                tools:layout_editor_absoluteY="264dp" />

            <TextView
                android:id="@+id/anginapaintxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anginapaintxt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="186dp"
                tools:layout_editor_absoluteY="264dp" />

            <TextView
                android:id="@+id/anginapain_symptoms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/symptoms"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="186dp"
                tools:layout_editor_absoluteY="264dp" />

            <TextView
                android:id="@+id/anginapain_symptomslist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anginapain_symptomslist"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="186dp"
                tools:layout_editor_absoluteY="264dp" />

            <TextView
                android:id="@+id/anginapain_causes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/causes"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="186dp"
                tools:layout_editor_absoluteY="264dp" />

            <TextView
                android:id="@+id/anginapain_causeslist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angina_is_most_frequently_the_result_of_underlying_coronary_artery_disease_the_coronary_arteries_supply_the_heart_with_oxygen_rich_blood_when_cholesterol_aggregates_on_the_artery_wall_and_hard_plaques_form_the_artery_narrows"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="186dp"
                tools:layout_editor_absoluteY="264dp" />


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>